WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214796
Fix null pointer crash in NetworkRTCProvider::createServerTCPSocket
https://bugs.webkit.org/show_bug.cgi?id=214796
Summary
Fix null pointer crash in NetworkRTCProvider::createServerTCPSocket
youenn fablet
Reported
2020-07-26 01:43:10 PDT
Fix null pointer crash in NetworkRTCProvider::createServerTCPSocket
Attachments
Patch
(4.30 KB, patch)
2020-07-26 01:53 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-07-26 01:52:39 PDT
<
rdar://problem/66051198
>
youenn fablet
Comment 2
2020-07-26 01:53:45 PDT
Created
attachment 405249
[details]
Patch
EWS
Comment 3
2020-07-27 00:49:32 PDT
Committed
r264909
: <
https://trac.webkit.org/changeset/264909
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405249
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug