Fix null pointer crash in NetworkRTCProvider::createServerTCPSocket https://bugs.webkit.org/show_bug.cgi?id=214796

Reviewed by Darin Adler.

In case of creating a TCP socket, NetworkRTCProvider will hop to the main thread before creating the socket.
In that case, NetworkRTCProvider may actually be closed between the time of receiving the message and hoping to the main thread.
Protect from this by adding nullptr checks.

* NetworkProcess/webrtc/NetworkRTCProvider.cpp:
(WebKit::NetworkRTCProvider::createServerTCPSocket):
(WebKit::NetworkRTCProvider::createClientTCPSocket):


Canonical link: https://commits.webkit.org/227632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264909 268f45cc-cd09-0410-ab3c-d52691b4dbfc